[package]
name = "spsc_queues"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
criterion = { version = "0.5", optional = true }
libc = {version = "0.2", features = ["extra_traits"] }

[dependencies.nix]
version  = "0.29"
features = ["mman", "process"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nix        = "0.29"

[features]
bench = ["criterion"]

[[bench]]
name = "process_bench"
harness = false
required-features = ["bench"]

[profile.release]
debug = 2
split-debuginfo = "off"
strip = false
lto = false 
